修正一部分錯誤、新增30題

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div id="progress"></div>
   <button id="toggle-theme-btn">🌗 切換主題</button>
   <button id="clear-btn">🔄 清除紀錄</button>
-  <h2>智慧測驗系統</h2>
+  <h2>智慧測驗系統 2025.08.12更新</h2>
   <div id="quiz-container"></div>
   <div style="text-align: center;">
     <button id="next-btn" style="display:none">下一題</button>
@@ -497,7 +497,7 @@
    options: [
       "可能會加劇⾼⾎壓",
       "藥效會⽐不含腎上腺素的Lidocaine差",
-      "如果意外推注⼊靜脈，可能會導致死已的結果",
+      "如果意外推注⼊靜脈，可能會導致死亡的結果",
       "會使⼼肌細胞內的鈣流量增加"
    ],
    answer: 2
@@ -3775,7 +3775,7 @@
    options: [
       "Amantadine",
       "Midazolam",
-      " Amitriptyline A",
+      "Amitriptyline",
       "Diazepam"
    ],
    answer: 0
@@ -4183,7 +4183,7 @@
       "老年犬的食物應增加鋅、銅和維生素A、B、E",
       "食物蛋白質應具有高生物價值來降低腎臟需排除的代謝產物",
       "食物的脂肪需足夠容易消化以提供適當的必需脂肪酸量而不會導致肥胖",
-      "需要高蛋白質、高脂肪量的飲食來提供足夠的影癢需求"
+      "需要高蛋白質、高脂肪量的飲食來提供足夠的營養需求"
    ],
    answer: 3
 },
@@ -6438,7 +6438,7 @@
       "Senn牽引器",
       "Mathieu持針器",
       "Rochester-Carmalt止血鉗",
-      " Finochietto牽引器 28"
+      " Finochietto牽引器"
    ],
    answer: 3
 },
@@ -11020,7 +11020,7 @@
 },
  {
    id: 995,
-   question: "使用何種消炎藥突然停用餵產生副作用？",
+   question: "使用何種消炎藥突然停用會產生副作用？",
    options: [
       "Carprofen（Rimadyl)",
       "Meloxicam（Metacam)",
@@ -12285,14 +12285,14 @@
 },
  {
    id: 1110,
-   question: "南美票鼠主食為牧草，全口共___牙齒，均會持續生長，健康的門齒顏色應為?",
+   question: "南美栗鼠主食為牧草，全口共___牙齒，均會持續生長，健康的門齒顏色應為?",
    options: [
       " 28 顆/橘色",
       " 16顆/透明白色",
       " 20顆/橘色",
       " 20顆/透明白色"
    ],
-   answer: 3
+   answer: 2
 },
  {
    id: 1111,
@@ -12472,12 +12472,12 @@
 },
  {
    id: 1127,
-   question: "某丙愛犬「多多」遭路上遊蕩犬咬傷，緊急送往動物醫院就診，獸醫師診察後，判斷後背部皮膚有嚴重撕裂傷，但沒有氣胸、骨折與腹部穿刺傷等問題，需住院治療與手術清創縫合，某丙幫「多多」保了寵物險，該保單的醫療費用保險，自負額為 20%，門診費用最高理賠 2，000 元（一年最多 10 次），住院費用最高 10，000 元（一年最多 1 次），手術費用最高費用最高10，000 元（一年最多 1 次），保險期間內累積最高賠償限額40，000 元。多多門診檢查費為 4，500 元，住院費為 9，500 元，手術麻醉費為 13，800 元，請問某丙的自負額為多少元？",
+   question: "某丙愛犬「多多」遭路上遊蕩犬咬傷，緊急送往動物醫院就診，獸醫師診察後，判斷後背部皮膚有嚴重撕裂傷，但沒有氣胸、骨折與腹部穿刺傷等問題，需住院治療與手術清創縫合，某丙幫「多多」保了寵物險，該保單的醫療費用保險，自負額為 20%，門診費用最高理賠 2,000 元（一年最多 10 次），住院費用最高 10,000 元（一年最多 1 次），手術費用最高費用最高10,000 元（一年最多 1 次），保險期間內累積最高賠償限額40,000 元。多多門診檢查費為 4,500 元，住院費為 9,500 元，手術麻醉費為 13,800 元，請問某丙的自負額為多少元？",
    options: [
-      "5，560元",
-      "5，800元",
-      "8，200元",
-      "7，160元"
+      "5,560元",
+      "5,800元",
+      "8,200元",
+      "7,160元"
    ],
    answer: 2
 },
@@ -12717,9 +12717,9 @@
    question: "為了檢查貓的頭部，請問動物醫事助理在保定貓時最應抓住的部位是?",
    options: [
       "尾部和前掌",
-      "前後 掌",
+      "前後掌",
       "後頸部和腹部",
-      "下顎和前掌，"
+      "下顎和前掌"
    ],
    answer: 3
 },
@@ -13531,7 +13531,7 @@
    question: "哪一種犬的主要工作是守衛家園？",
    options: [
       "拉布拉多犬",
-      "比特犬",
+      "金毛尋回犬",
       "哈士奇犬",
       "德國牧羊犬"
    ],
@@ -14454,10 +14454,10 @@
    id: 1307,
    question: "哪種藥物是用於治療肌肉痙攣的？ ",
    options: [
-      "氟康唑（fluconazole)",
-      "毛地黃（Digoxin)",
-      "美索巴莫（Methocarbamol)",
-      "氟康唑（fluconazole)"
+      "氟康唑（fluconazole）",
+      "毛地黃（Digoxin）",
+      "美索巴莫（Methocarbamol）",
+      "丙泊酚（Propofol）"
    ],
    answer: 2
 },
@@ -15750,7 +15750,7 @@
 },
  {
    id: 1425,
-   question: "動物福利的概念存在於何處? ①動物生存的時候②動物死亡的時候③只限活存動物的狀態④只限動物死已狀況",
+   question: "動物福利的概念存在於何處? ①動物生存的時候②動物死亡的時候③只限活存動物的狀態④只限動物死亡狀況",
    options: [
       " ①、③",
       " ①、②",
@@ -15772,7 +15772,7 @@
 },
  {
    id: 1427,
-   question: "動物醫事助理合格證書逾有效期間日，仍未申請更新，應重新經認證機構之能力檢定測驗 合格，始得依第五條第一項規定申請認證為動物醫事助理。",
+   question: "動物醫事助理合格證書逾有效期間_____日，仍未申請更新，應重新經認證機構之能力檢定測驗 合格，始得依第五條第一項規定申請認證為動物醫事助理。",
    options: [
       "60",
       "90",
@@ -16553,7 +16553,7 @@
 },
  {
    id: 1498,
-   question: "患犬手術完成送回家後，飼主依照醫囑，每天需餵兩次抗生素與止痛藥，同時接下來數天 還要限制患犬活動在一定程度內。請問這些醫囑會出現在?",
+   question: "患犬手術完成送回家後，飼主依照醫囑，每天需餵兩次抗生素與止痛藥，同時接下來數天 還要限制患犬活動在一定程度內。請問這些醫囑會出現在_____?",
    options: [
       "出院衛教單",
       "就診須知單",
@@ -18137,7 +18137,7 @@
 },
  {
    id: 1642,
-   question: "當激活 1 受體時，會對血壓產生何種影響?",
+   question: "當激活α₁受體時，會對血壓產生何種影響?",
    options: [
       "血壓降低",
       "血壓升高",
@@ -18414,7 +18414,7 @@
    id: 1667,
    question: "運送動物之人員多久應接受在職講習一次？ ",
    options: [
-      "每3年",
+      "每三年",
       "每年",
       "每兩年",
       "不必講習"
@@ -19468,7 +19468,7 @@
 },
  {
    id: 1763,
-   question: "漬瘍型角膜炎的主要病因不包括?",
+   question: "潰瘍型角膜炎的主要病因不包括?",
    options: [
       "創傷",
       "細菌感染",
@@ -20130,10 +20130,10 @@
    id: 1823,
    question: "請問下列字首，何者意思相同？",
    options: [
-      "A-andan-",
-      "Dis-anddys-",
-      "Hypo-andhyper-",
-      "Pan-andpoly-"
+      "A- and an-",
+      "Dis- and dys-",
+      "Hypo- and hyper-",
+      "Pan- and poly-"
    ],
    answer: 0
 },
@@ -25015,7 +25015,7 @@
    question: "關於動物的口服灌藥，下列何者正確? ",
    options: [
       "羊的嗅覺不靈敏，可以將藥物與飼料混合餵予",
-      "在懷孕後期的羊可以將丙二醇以口服給藥，來預防任娠毒血症發作",
+      "在懷孕後期的羊可以將丙二醇以口服給藥，來預防妊娠毒血症發作",
       "將液態藥物以口服給藥時，羊無須保定",
       "羊天性好奇，直接給予以藥丸他也會直接吞下"
    ],
@@ -25713,6 +25713,337 @@
       "胰臟"
    ],
    answer: 0
+},
+[
+ {
+   id: 2331,
+   question: "哪一項為血管系統的主要功能?",
+   options: [
+      "提供運動能量",
+      "運送體內物質",
+      "控制體溫",
+      "生成荷爾蒙"
+   ],
+   answer: 1
+},
+ {
+   id: 2332,
+   question: "獸醫學生在_____階段,或因課程要求,部分期間會到動物醫院工作,以獲得經驗",
+   options: [
+      "見習（externship）",
+      "繼續教育 （continuing education）",
+      "檢定 （certification）",
+      "認證 （Credentials）"
+   ],
+   answer: 0
+},
+ {
+   id: 2333,
+   question: "請問擠肛門囊時,應令病患採下列何種姿勢?",
+   options: [
+      "俯臥姿",
+      "側臥姿",
+      "站立姿",
+      "仰臥姿"
+   ],
+   answer: 2
+},
+ {
+   id: 2334,
+   question: "肥皂和清潔劑有什麼共同點?",
+   options: [
+      "它們都會使微生物的蛋白質變性",
+      "它們都會破壞細胞膜",
+      "它們都用來淨化水",
+      "它們都會導致氮和磷化合物從細胞中漏出"
+   ],
+   answer: 1
+},
+ {
+   id: 2335,
+   question: "犬貓進入老年期,身體容易出現一些衰老跡象, 需要額外關注和營養支援延緩衰老。以下描述犬 貓衰老的表現和潛在原因中錯誤的選項是?",
+   options: [
+      "步態遲緩,喜歡躲藏——可能存在慢性疼 痛、骨關節疾病等",
+      "喜歡亂叫和出現隨意排尿現象——平時過於寵溺導致的行為不良",
+      "活力下降,嗜睡易疲勞,喘息不安——可 能存在心臟疾病、關節疾病、疼痛等",
+      "食欲下降——牙齒或口腔問題、肝膽或腎 臟疾病、疼痛等"
+   ],
+   answer: 1
+},
+ {
+   id: 2336,
+   question: "便秘的主要特徵是什麼? ",
+   options: [
+      "糞便顏色變淺 ",
+      "每日糞便的頻率超過10次 ",
+      "糞便形狀變圓 ",
+      "每日糞便的頻率少於3次"
+   ],
+   answer: 3
+},
+ {
+   id: 2337,
+   question: "防止便秘的主要方法是什麼?",
+   options: [
+      "多吃油膩食物",
+      "保持水分平衡",
+      "增加鹽的攝取",
+      "減少纖維攝取"
+   ],
+   answer: 1
+},
+ {
+   id: 2338,
+   question: "給予小豬皮下注射時,常使用哪個注射部位?",
+   options: [
+      "頸部",
+      "背部",
+      "腹部",
+      "腿部"
+   ],
+   answer: 2
+},
+ {
+   id: 2339,
+   question: "管制藥物的許可證由哪個機構發放?",
+   options: [
+      "食品藥物署",
+      "警察局",
+      "動植物防疫署",
+      "消防局"
+   ],
+   answer: 0
+},
+ {
+   id: 2340,
+   question: "以下哪種投藥方式生體可用率為最高?",
+   options: [
+      "經口投藥",
+      "靜脈注射",
+      "肌肉注射",
+      "經直腸投藥"
+   ],
+   answer: 1
+},
+ {
+   id: 2341,
+   question: "哪種藥物是用於治療細菌感染的抗生素?",
+   options: [
+      "氨基糖苷類",
+      "毛地黃 （Digoxin）",
+      "氯化鉀",
+      "氨基非林®（Aminophylline® ）"
+   ],
+   answer: 0
+},
+ {
+   id: 2342,
+   question: "依據動保法規定,宰殺、故意傷害或使動物遭受 傷害,致動物肢體嚴重殘缺或重要器官功能喪 失。將處多少罰金?",
+   options: [
+      "新臺幣二十萬元以上二百萬元以下 ",
+      "新臺幣二十萬元以上一百萬元以下 ",
+      "新臺幣五十萬元以上一百萬元以下 ",
+      "新臺幣五十萬元以上二百萬元以下"
+   ],
+   answer: 0
+},
+ {
+   id: 2343,
+   question: "犬貓毛髮的主要組成成分是",
+   options: [
+      "蛋白質",
+      "脂肪",
+      "澱粉",
+      "纖維素"
+   ],
+   answer: 0
+},
+ {
+   id: 2344,
+   question: "以下哪一種材料不能使用氧化乙烯 （ethylene oxide） 滅菌?",
+   options: [
+      "壓克力（Acrylic）",
+      "不銹鋼（Stainless steel）",
+      "聚丙烯 （Polypropylene）",
+      "橡膠 （Rubber）"
+   ],
+   answer: 0
+},
+ {
+   id: 2345,
+   question: "在單一人進行基本救命術（Basic life support）時,給予胸外按壓:人工呼吸的比例為何?",
+   options: [
+      "15:02",
+      "30:02:00",
+      "60:02:00",
+      " 15:1"
+   ],
+   answer: 1
+},
+ {
+   id: 2346,
+   question: "當飼料以乾物質基準表示時,養分濃度會怎樣?",
+   options: [
+      "保持不變",
+      "增加",
+      "減少",
+      "翻倍"
+   ],
+   answer: 1
+},
+ {
+   id: 2347,
+   question: "處理腐蹄病首選消毒劑濃度為何?",
+   options: [
+      "5%次氯酸鈉",
+      "10%次氯酸鈉",
+      "5%碘溶液",
+      "0.5%甲醛"
+   ],
+   answer: 1
+},
+ {
+   id: 2348,
+   question: "使用人工授精作為牛群繁殖策略項目的主要優勢是什麼? ",
+   options: [
+      "降低性病的傳播率 ",
+      "降低獨自飼養種公牛成本 ",
+      "提高生產效率 ",
+      "以上皆是"
+   ],
+   answer: 3
+},
+ {
+   id: 2349,
+   question: "依據動保法規定,宰殺收容於動物收容處所或直轄市、縣（市）主管機關指定場所之動物,應由獸醫師或在獸醫師監督下執行之。如違規,將處多少罰鍰? ",
+   options: [
+      "新臺幣三千元以上一萬五千元以下 ",
+      "新臺幣一萬五千元以上七萬五千元以下 ",
+      "新臺幣四萬元以上二十萬元以下 ",
+      "五萬元以上二十五萬元以下"
+   ],
+   answer: 0
+},
+ {
+   id: 2350,
+   question: "一隻 12 歲的馬爾濟斯,在例行健康檢查時發現有輕微的二尖瓣脫垂（ACVIMB1期）,但尚未出現 任何臨床症狀,精神食慾皆良好。關於這隻狗狗的飲食管理建議,下列何者最不恰當? ",
+   options: [
+      "建議飼主避免餵食高鹽分的人類食物或零食。 ",
+      "立刻更換為市面上鈉含量最低的重症心臟病處方飼料。 ",
+      "確認目前食用的飼料含有牛磺酸及L-肉鹼等心肌營養素。 ",
+      "維持目前能穩定進食、蛋白質品質優良的飼料即可。"
+   ],
+   answer: 1
+},
+ {
+   id: 2351,
+   question: "對於一隻因晚期心臟病導致食慾廢絕、體重持續下降項飲食管理目標應為當務之急? ",
+   options: [
+      "嚴格控制鈉的攝取量。 ",
+      "確保攝取足夠的熱量與高生物價值的蛋白質。 ",
+      "轉換成高纖維配方以改善腸胃功能。 ",
+      "增加 Omega-3脂肪酸的補充以對抗發炎。"
+   ],
+   answer: 1
+},
+ {
+   id: 2352,
+   question: "倉鼠的正常呼吸率是多少? ",
+   options: [
+      "每分鐘8至20次 ",
+      "每分鐘8至30次 ",
+      "每分鐘35至135次 ",
+      "每分鐘30至60次"
+   ],
+   answer: 2
+},
+ {
+   id: 2353,
+   question: "什麼是確認動物是否死亡的可靠方法?",
+   options: [
+      "觀察心跳和呼吸 ",
+      "檢查皮膚顏色 ",
+      "觸碰動物的鼻子 ",
+      "確認動物的眼睛是否閉合 "
+   ],
+   answer: 0
+},
+ {
+   id: 2354,
+   question: "腸道阻塞恢復的馬需要有（?）作用的食物,例如苜蓿、乾草、青草及麩皮粥就比較適合。",
+   options: [
+      "收斂性 ",
+      "輕瀉性",
+      "止瀉性",
+      "緩解性"
+   ],
+   answer: 1
+},
+ {
+   id: 2355,
+   question: "在乳牛的繁殖管理中,為什麼要針對未懷孕、未發情的泌乳牛做定期檢查和處置?",
+   options: [
+      "降低平均懷孕天數來節省成本 ",
+      "擔心牛隻因為蹄病跛足而發情不明顯 ",
+      "確認牛隻沒有因子宮蓄膿而造成不發情 ",
+      "以上皆是"
+   ],
+   answer: 3
+},
+ {
+   id: 2356,
+   question: "乳牛的蹄部維持最佳狀態所需的角質生長速度為每月多少? ",
+   options: [
+      "0.1公分 ",
+      "0.3公分 ",
+      "0.5公分 ",
+      "1公分"
+   ],
+   answer: 2
+},
+ {
+   id: 2357,
+   question: "請問下列製劑,何者最適用於皮膚?  ",
+   options: [
+      "酊劑 （tincture） ",
+      "酏劑 （elixir） ",
+      "糊劑（paste） ",
+      "懸浮液（suspension）"
+   ],
+   answer: 0
+},
+ {
+   id: 2358,
+   question: "呼吸興奮劑用於刺激呼吸）,下列描述何者為真? ",
+   options: [
+      "用於刺激剖腹產後新生兒的呼吸 ",
+      "臍帶注射給藥。 ",
+      "舌下注射給藥。 ",
+      "以上皆是"
+   ],
+   answer: 3
+},
+ {
+   id: 2359,
+   question: "獸醫師（佐）處方箋「用法」應包括以下幾項？ ",
+   options: [
+      "投藥途徑、劑量 ",
+      "投藥途徑、劑量、投藥頻度、投藥天數 ",
+      "投藥頻度、投藥 天數 ",
+      "投藥途徑、劑量、投藥頻度"
+   ],
+   answer: 1
+},
+ {
+   id: 2360,
+   question: "藥物分類中以下何者為是屬分類項？ ",
+   options: [
+      "鎮定劑 ",
+      "情緒穩定劑 ",
+      "止痛藥 ",
+      "以上皆是"
+   ],
+   answer: 3
 }    
 
       // 👉 直接在這裡追加你的 1500 題
